; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_async.c_ring_drain.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_async.c_ring_drain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32)* @ring_drain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ring_drain(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = call i32 @ring_size_of_read_back(%struct.TYPE_5__* %6)
  %8 = sub nsw i32 0, %7
  %9 = icmp sge i32 %5, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @av_assert2(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = call i32 @ring_size(%struct.TYPE_5__* %13)
  %15 = icmp sle i32 %12, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @av_assert2(i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %21, %18
  store i32 %22, i32* %20, align 4
  ret i32 0
}

declare dso_local i32 @av_assert2(i32) #1

declare dso_local i32 @ring_size_of_read_back(%struct.TYPE_5__*) #1

declare dso_local i32 @ring_size(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
